--- a/amundsen_application/static/js/components/common/TagsList/styles.scss
+++ b/amundsen_application/static/js/components/common/TagsList/styles.scss
@@ -17,6 +17,7 @@ hr.header-hr {
   font-size: 16px;
   text-decoration: none;
   display: block;
+  margin-top: $spacer-1;
 
   &:hover,
   &:visited,
